test/errors/undefined_function_1.dmd
add(4, 5)

--- Output
Undefined function

add(int64, int64) is not defined.

1| add(4, 5)
   ^^^
---
